--- a/movimientoRas/index.html
+++ b/movimientoRas/index.html
@@ -4,10 +4,31 @@
   <meta charset="UTF-8">
   <title>Movimiento RAS</title>
 
+  <!-- LiveReload script -->
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+
+  <!-- Angular Routing -->
+  <base href="/">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="/assets/libs/angular-material/angular-material.min.css">
+
+  <!--  JS  -->
+  <!-- LIBS -->
+  <script src="/assets/libs/angular/angular.min.js"></script>
+  <script src="/assets/libs/angular-animate/angular-animate.min.js"></script>
+  <script src="/assets/libs/angular-aria/angular-aria.min.js"></script>
+  <script src="/assets/libs/angular-material/angular-material.min.js"></script>
+
+  <!--   CONTROLLERS  -->
+  <script src="/app/controllers/mainCtrl.js"></script>
+
+  <!-- MAIN APP FILES -->
+  <script src="/app/app.routes.js"></script>
+  <script src="/app/app.js"></script>
 
 </head>
 <body>
-
+  <!-- CONTENT GOES HERE! -->
 </body>
 </html>
