--- a/movimientoRas/index.html
+++ b/movimientoRas/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
+  <!--      METADATA     -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8"/>
   <title>Movimiento RAS</title>
 
   <!-- LiveReload script -->
-  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+  <script>
+    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+  </script>
 
   <!-- Angular Routing -->
   <base href="/">
@@ -19,16 +23,23 @@
   <script src="/assets/libs/angular-animate/angular-animate.min.js"></script>
   <script src="/assets/libs/angular-aria/angular-aria.min.js"></script>
   <script src="/assets/libs/angular-material/angular-material.min.js"></script>
+  <script src="/assets/libs/angular-route/angular-route.min.js"></script>
 
   <!--   CONTROLLERS  -->
   <script src="/app/controllers/mainCtrl.js"></script>
 
   <!-- MAIN APP FILES -->
+  <script src="/app/app.config.js"></script>
+  <script src="/app/app.core.js"></script>
   <script src="/app/app.routes.js"></script>
   <script src="/app/app.js"></script>
 
 </head>
-<body>
-  <!-- CONTENT GOES HERE! -->
+
+<body layout="column" flex id="page-top" ng-app="movimientoRasApp" ng-controller="mainController as main">
+    <md-content layout="column" flex class="md-padding">
+      CONTENT!
+    </md-content>
 </body>
+
 </html>
