--- a/movimientoRas/index.html
+++ b/movimientoRas/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!--      METADATA     -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8" />
   <title>Movimiento RAS</title>
 
   <!-- LiveReload script -->
@@ -15,31 +15,83 @@
   <base href="/">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/assets/libs/angular-material/angular-material.min.css">
+  <link rel="stylesheet" href="/assets/libs/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/libs/bootstrap-material-design/dist/css/roboto.min.css">
+  <link rel="stylesheet" href="/assets/libs/bootstrap-material-design/dist/css/material.min.css">
+  <link rel="stylesheet" href="/assets/libs/bootstrap-material-design/dist/css/ripples.min.css">
 
   <!--  JS  -->
   <!-- LIBS -->
+  <script src="/assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="/assets/libs/angular/angular.min.js"></script>
   <script src="/assets/libs/angular-animate/angular-animate.min.js"></script>
-  <script src="/assets/libs/angular-aria/angular-aria.min.js"></script>
-  <script src="/assets/libs/angular-material/angular-material.min.js"></script>
   <script src="/assets/libs/angular-route/angular-route.min.js"></script>
+  <script src="/assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="/assets/libs/bootstrap-material-design/dist/js/material.min.js"></script>
+  <script src="/assets/libs/bootstrap-material-design/dist/js/ripples.min.js"></script>
 
   <!--   CONTROLLERS  -->
-  <script src="/app/controllers/mainCtrl.js"></script>
+  <!-- <script src="/app/controllers/mainCtrl.js"></script> -->
 
   <!-- MAIN APP FILES -->
-  <script src="/app/app.config.js"></script>
   <script src="/app/app.core.js"></script>
   <script src="/app/app.routes.js"></script>
   <script src="/app/app.js"></script>
 
 </head>
 
-<body layout="column" flex id="page-top" ng-app="movimientoRasApp" ng-controller="mainController as main">
-    <md-content layout="column" flex class="md-padding">
-      CONTENT!
-    </md-content>
+<body>
+  <div class="navbar navbar-default navbar-material-pink">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Movimiento RAS</a>
+    </div>
+    <div class="navbar-collapse collapse navbar-responsive-collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="javascript:void(0)">Active</a></li>
+        <li><a href="javascript:void(0)">Link</a></li>
+        <li class="dropdown">
+          <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="javascript:void(0)">Action</a></li>
+            <li><a href="javascript:void(0)">Another action</a></li>
+            <li><a href="javascript:void(0)">Something else here</a></li>
+            <li class="divider"></li>
+            <li class="dropdown-header">Dropdown header</li>
+            <li><a href="javascript:void(0)">Separated link</a></li>
+            <li><a href="javascript:void(0)">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left">
+        <input type="text" class="form-control col-lg-8" placeholder="Search">
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="javascript:void(0)">Link</a></li>
+        <li class="dropdown">
+          <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="javascript:void(0)">Action</a></li>
+            <li><a href="javascript:void(0)">Another action</a></li>
+            <li><a href="javascript:void(0)">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="javascript:void(0)">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- MATERIAL INIT -->
+  <script>
+    $(document).ready(function() {
+      $.material.init();
+    });
+  </script>
 </body>
 
 </html>
