--- a/movimientoRas/index.html
+++ b/movimientoRas/index.html
@@ -31,7 +31,7 @@
   <script src="/assets/libs/bootstrap-material-design/dist/js/ripples.min.js"></script>
 
   <!--   CONTROLLERS  -->
-  <!-- <script src="/app/controllers/mainCtrl.js"></script> -->
+  <script src="/app/controllers/mainCtrl.js"></script>
 
   <!-- MAIN APP FILES -->
   <script src="/app/app.core.js"></script>
