--- a/movimientoRas/index.html
+++ b/movimientoRas/index.html
@@ -15,17 +15,21 @@
   <base href="/">
 
   <!-- CSS -->
+  <!-- LIBS -->
   <link rel="stylesheet" href="/assets/libs/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/assets/libs/bootstrap-material-design/dist/css/roboto.min.css">
   <link rel="stylesheet" href="/assets/libs/bootstrap-material-design/dist/css/material.min.css">
   <link rel="stylesheet" href="/assets/libs/bootstrap-material-design/dist/css/ripples.min.css">
 
+  <!-- CUSTOM CSS -->
+  <link rel="stylesheet" href="/assets/css/style.css">
+
   <!--  JS  -->
   <!-- LIBS -->
   <script src="/assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="/assets/libs/angular/angular.min.js"></script>
-  <script src="/assets/libs/angular-animate/angular-animate.min.js"></script>
   <script src="/assets/libs/angular-route/angular-route.min.js"></script>
+  <script src="/assets/libs/angular-animate/angular-animate.min.js"></script>
   <script src="/assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="/assets/libs/bootstrap-material-design/dist/js/material.min.js"></script>
   <script src="/assets/libs/bootstrap-material-design/dist/js/ripples.min.js"></script>
@@ -40,51 +44,26 @@
 
 </head>
 
-<body>
-  <div class="navbar navbar-default navbar-material-pink">
+<body ng-app="movimientoRasApp" ng-controller="mainController as main">
+  <nav class="navbar  navbar-fixed-top navbar-material-pink">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Movimiento RAS</a>
+      <a class="navbar-brand" href="#/">Movimiento RAS</a>
     </div>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="javascript:void(0)">Active</a></li>
-        <li><a href="javascript:void(0)">Link</a></li>
-        <li class="dropdown">
-          <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="javascript:void(0)">Action</a></li>
-            <li><a href="javascript:void(0)">Another action</a></li>
-            <li><a href="javascript:void(0)">Something else here</a></li>
-            <li class="divider"></li>
-            <li class="dropdown-header">Dropdown header</li>
-            <li><a href="javascript:void(0)">Separated link</a></li>
-            <li><a href="javascript:void(0)">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <input type="text" class="form-control col-lg-8" placeholder="Search">
-      </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="javascript:void(0)">Link</a></li>
-        <li class="dropdown">
-          <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="javascript:void(0)">Action</a></li>
-            <li><a href="javascript:void(0)">Another action</a></li>
-            <li><a href="javascript:void(0)">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="javascript:void(0)">Separated link</a></li>
-          </ul>
+        <li ng-repeat="route in main.routes" data-ng-class="navClass('{{route.name}}')">
+          <a href="#{{route.path}}" ng-bind="route.name"></a>
         </li>
       </ul>
     </div>
-  </div>
+  </nav>
+
+  <span id="main-view" ng-view></span>
 
   <!-- MATERIAL INIT -->
   <script>
