[View] Structure of cooperason.html [Feature] Added all the .svg files (except the little dudes)

--- a/cooperason.html
+++ b/cooperason.html
@@ -3,3 +3,78 @@ layout: default
 title: Cooperason
 permalink: /cooperason/
 ---
+
+<header id="index-header" class="header text-center">
+  <div class="container">
+    <div class="row">
+      <img src="/assets/img/svg/logo-cooperason.svg" class=""/>
+    </div>
+  </div>
+</header>
+
+<section id="section__como-donar" class="container text-center">
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+      <img src="/assets/img/svg/how/como_donar.svg" class=""/>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+      <h3>¡Es fácil y sencillo! Contamos con tres opciones de donativos:</h3>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-2 col-sm-offset-2">
+      <img src="/assets/img/svg/how/uno.svg" class=""/>
+    </div>
+    <div class="col-xs-10 col-sm-6 text-left">
+      <p>
+        Déposito directo en nuestras cuentas de banco: <br>
+        <img src="/assets/img/svg/how/logo-bancomer.svg" class=""/> 00164057074 <br>
+        <img src="/assets/img/svg/how/logo-banorte.svg" class=""/> 0211013743
+      </p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-10 col-sm-6 col-sm-offset-2  text-right">
+      <p>Metodo de afiliación, dando un donativo fijo durante un tiempo determinado, dependiendo los términos que el donante elija.</p>
+    </div>
+    <div class="col-xs-2">
+      <img src="/assets/img/svg/how/dos.svg" class=""/>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-2 col-sm-offset-2">
+      <img src="/assets/img/svg/how/tres.svg" class=""/>
+    </div>
+    <div class="col-xs-10 col-sm-6  text-left">
+      <p>
+        Donativos en especie, directo en nuestras instalaciones.
+      </p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-2 text-left">
+      <p>
+        Para mas información comuniquese
+        a nuestras oficinas: 662 137 43 89 o al
+        correo electrónico macaroyanez@hotmail.com con Carolina Yanez
+      </p>
+    </div>
+  </div>
+</section>
+
+<section id="section__recuerda" class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-8 col-sm-offset-2 text-center">
+      <p>
+        Recuerda que Movimiento RAS I.A.P por los niños con cáncer, es una fundación que se mantiene a base de donativos.
+      </p>
+    </div>
+  </div>
+</section>
