--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ bg_img: ras
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-2 col-md-4 col-md-offset-2">
       <div class="">
-        <img src="img/svg/{{p.one.svg}}.svg" class=""/>
+        <img src="/assets/img/svg/programs/{{p.one.svg}}.svg" class=""/>
       </div>
       <div class="">
         <h4 class="">{{p.one.title}}:</h4>
@@ -53,7 +53,7 @@ bg_img: ras
     </div>
     <div class="col-sm-4 col-xs-12 col-md-4">
       <div class="">
-        <img src="img/svg/{{p.two.svg}}.svg" class="">
+        <img src="/assets/img/svg/programs/{{p.two.svg}}.svg" class="">
       </div>
       <div class="">
         <h4 class="">{{p.two.title}}:</h4>
@@ -77,7 +77,7 @@ bg_img: ras
 <section id="section__cooperason" class="container text-center">
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-      <img src="img/svg/cooperason.svg" class=""/>
+      <img src="/assets/img/svg/logo-cooperason.svg" class=""/>
     </div>
   </div>
 </section>
