[Feature] Added header images

--- a/conocenos.html
+++ b/conocenos.html
@@ -4,10 +4,9 @@ title: Conocenos
 permalink: /conocenos/
 ---
 
-<header id="index-header" class="header">
+<header id="index-header" class="header header-conocenos">
   <div class="container">
     <div class="row">
-      ...header...
     </div>
   </div>
 </header>
