--- a/cooperason.html
+++ b/cooperason.html
@@ -4,10 +4,12 @@ title: Cooperason
 permalink: /cooperason/
 ---
 
-<header id="index-header" class="header text-center">
-  <div class="container">
+<header id="index-header" class="header header-cooperason text-center">
+  <div class="header-body container">
     <div class="row">
-      <img src="/assets/img/svg/logo-cooperason.svg" class=""/>
+      <div class="col-xs-8 col-xs-offset-2 col-sm-7 col-sm-offset-1 col-md-6">
+        <img src="/assets/img/svg/logo-cooperason.svg" class="cooperason__svg-cooperason"/>
+      </div>
     </div>
   </div>
 </header>
