--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ permalink: /
 bg_img: ras
 ---
 
-<header id="index-header" class="header">
-  <div class="container">
+<div id="index-header" class="header header-index" >
+  <div class="header-body container">
     <div class="row">
       <div class="col-xs-8 col-xs-offset-2 col-sm-7 col-sm-offset-1 col-md-6">
         <h1 class="">Nuestra Fundación</h1>
@@ -18,7 +18,7 @@ bg_img: ras
       </div>
     </div>
   </div>
-</header>
+</div>
 
 <section id="section__movimiento" class="container text-center">
   <div class="row">
@@ -28,7 +28,7 @@ bg_img: ras
         Fundado el 2 de septiembre del 2008.<br>
         Nace para beneficiar a pequeños que día a día luchan contra el cáncer, una enfermedad que no conoce fronteras, clase social, sexo o religión.
       </p>
-      <a href="/conocenos" class="btn btn-lg">Conoce más</a>
+      <a href="/conocenos" class="btn btn-lg btn-pink">Conoce más</a>
     </div>
   </div>
 </section>
@@ -77,7 +77,7 @@ bg_img: ras
 <section id="section__cooperason" class="container text-center">
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-      <img src="/assets/img/svg/logo-cooperason.svg" class=""/>
+      <img src="/assets/img/svg/logo-cooperason.svg" class="cooperason__svg-cooperason"/>
     </div>
   </div>
 </section>
