Added new navbar and basic styles.

--- a/conocenos.html
+++ b/conocenos.html
@@ -12,6 +12,7 @@ permalink: /conocenos/
 </header>
 
 <section id="section__historia" class="container text-center">
+  <div class="monito"><img id="monito-izq" src="/assets/img/svg/dudes/monito1.svg"/></div>
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-sm-offset-2">
       <h1>Historia</h1>
@@ -22,9 +23,10 @@ permalink: /conocenos/
       <a href="/conocenos" class="btn btn-lg">Donar</a>
     </div>
   </div>
+    <div class="monito"><img id="monito-der" src="/assets/img/svg/dudes/monito2.svg"/></div>
 </section>
 
-<section id="section__mision" class="container text-center">
+<section id="section__mision" class="container text-center nice-dude-banner">
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-sm-offset-2">
       <h1>Misión</h1>
@@ -35,7 +37,7 @@ permalink: /conocenos/
   </div>
 </section>
 
-<section id="section__vision" class="container text-center">
+<section id="section__vision" class="container text-center nice-dude-banner">
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-sm-offset-2">
       <h1>Visión</h1>
