--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ permalink: /
 bg_img: ras
 ---
 
-<div id="index-header" class="header header-index" >
+<header id="index-header" class="header header-index" >
   <div class="header-body container">
     <div class="row">
       <div class="col-xs-8 col-xs-offset-2 col-sm-7 col-sm-offset-1 col-md-6">
@@ -18,9 +18,11 @@ bg_img: ras
       </div>
     </div>
   </div>
-</div>
+</header>
 
 <section id="section__movimiento" class="container text-center">
+  <div class="monito"><img id="monito-izq" src="/assets/img/svg/dudes/monito1.svg">
+  </div>
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
       <h1 class="">Movimiento RAS</h1>
@@ -31,6 +33,7 @@ bg_img: ras
       <a href="/conocenos" class="btn btn-lg btn-pink">Conoce más</a>
     </div>
   </div>
+  <div class="monito"><img id="monito-der" src="/assets/img/svg/dudes/monito2.svg">
 </section>
 
 <section id="section__programas" class="container text-center">
@@ -64,9 +67,9 @@ bg_img: ras
   {% endfor %}
 </section>
 
-<section id="section__about" class="container text-center">
+<section id="section__about" class="container text-center nice-dude-banner">
   <div class="row">
-    <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
       <p>
         Considerados en Sonora como el único albergue de iniciativa privada, Movimiento RAS da amor y calidez a niños detodo el estado.
       </p>
