--- a/cooperason.html
+++ b/cooperason.html
@@ -16,7 +16,10 @@ permalink: /cooperason/
 
 <section id="section__como-donar" class="container text-center">
   <div class="row">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1 hidden-xs ">
+      <img src="/assets/img/svg/how/como_donar-monitos.svg" class=""/>
+    </div>
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1 visible-xs">
       <img src="/assets/img/svg/how/como_donar.svg" class=""/>
     </div>
   </div>
@@ -61,7 +64,7 @@ permalink: /cooperason/
   </div>
 
   <div class="row">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-2 text-left">
+    <div class="col-xs-5 col-sm-6 col-xs-offset-1 text-left">
       <p>
         Para mas información comuniquese
         a nuestras oficinas: 662 137 43 89 o al
@@ -73,7 +76,7 @@ permalink: /cooperason/
 
 <section id="section__recuerda" class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-8 col-sm-offset-2 text-center">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center nice-dude-banner">
       <p>
         Recuerda que Movimiento RAS I.A.P por los niños con cáncer, es una fundación que se mantiene a base de donativos.
       </p>
